--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 </head>
 
 <body>
-
+<div id="topbar" class="d-flex align-items-center fixed-top">
+  <div class="contact-info d-flex justify-content-between
+  "></div>
+</div>
   
 
 
